--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,6 +83,9 @@
 	})
 </script>
 <script type="text/javascript">
+	$(window).on('load', function() {
+		$('.info[data-id="1"]').click();
+	});
 	$(document).ready(function() {
 		var duration = 5,
 		currentindex = Math.round(Math.random()*(3-1)+1),
