--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,7 +86,7 @@
 	$(document).ready(function() {
 	});
 	$(window).on('load', function() {
-		// $('.info[data-id="1"]').click();
+		$('.info[data-id="1"]').click();
 		var duration = 5,
 		currentindex = Math.round(Math.random()*(3-1)+1),
 		totalitems = $('.info').length,
