--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,10 +11,10 @@
 		<span class="close-nav custom-close-btn"></span>
 	</div>
 	<ul>
-		<li><a href="//wigmorewholesale.com">Buy or Sell Wholesale products in Nigeria</a></li>
-		<li><a href="//jump.africa">List your Service Business on Nigeria's Largest Service Marketplace</a></li>
-		<li><a href="//jump.africa/professional/services">Find a Freelancer in Nigeria</a></li>
-		<li><a href="//apartments.com/gh">Find an Apartment to rent in Ghana</a></li>
+		<li><a target="_blank" href="//wigmorewholesale.com">Buy or Sell Wholesale products in Nigeria</a></li>
+		<li><a target="_blank" href="//jump.africa">List your Service Business on Nigeria's Largest Service Marketplace</a></li>
+		<li><a target="_blank" href="//jump.africa/professional/services">Find a Freelancer in Nigeria</a></li>
+		<li><a target="_blank" href="//apartments.com/gh">Find an Apartment to rent in Ghana</a></li>
 	</ul>
 </nav>
 <div class="search-posts">
