--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,7 +83,7 @@
 	})
 </script>
 <script type="text/javascript">
-	$(document).ready(function() {
+	$(window).on('load', function() {
 		var duration = 5,
 		currentindex = Math.round(Math.random()*(3-1)+1),
 		totalitems = $('.info').length,
@@ -140,10 +140,10 @@
 		$('.photo').each(function() {
 			$(this).attr('style', `background-image: url('${$(this).data('image')}')`);
 		});
-		$(window).on('load', function() {
-			setTimeout(function() {
+		// $(window).on('load', function() {
+		// 	setTimeout(function() {
 				runslide();
-			}, 1000);
-		});
+			// }, 1000);
+		// });
 	});
 </script>
