custom routes added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -437,6 +437,7 @@ footer {
 }
 .all-blogs {
     .blog-card {
+        margin: 10px 0;
         .col {
             display: flex;
             flex-direction: column;
