link open in new tab fixed

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -32,7 +32,9 @@
     </div>
 </div>
 <script type="text/javascript">
-    $.each($('#raw_content a'), function() {
-        $(this).attr('target', '_blank');
+    $(document).ready(function() {
+        $.each($('#raw_content a'), function() {
+            $(this).attr('target', '_blank');
+        });
     });
 </script>
