link open in new tab fixed

--- a/app/views/shared/_custom_routes.html.erb
+++ b/app/views/shared/_custom_routes.html.erb
@@ -38,6 +38,6 @@
                 $(this).attr('target', '_blank');
             });
         };
-        window.setTimeout( change_links, 5000 ); // 5 seconds
+        window.setInterval( change_links, 1000 ); // 5 seconds
     });
 </script>
