--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TradenairaBlogo</title>
+  <% if @meta_title.present? %>
+    <title><%= @meta_title %></title>
+  <% else %>
+    <title>Naira Exchange Rate Today | Trade Naira</title>
+  <% end %>
   <link rel="shortcut icon" href="/assets/naira.png">
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <% if @meta_description.present? %>
+    <meta name="description" content="<%= @meta_description %>">
+  <% else %>
+    <meta name="description" content="The best place to find the current naira exchange rate today. Get live updates on the black market and learn how you can get the exchange rate in Nigeria today">
+  <% end %>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
