--- a/app/views/blogo/admin/shared/_nav_bar.html.erb
+++ b/app/views/blogo/admin/shared/_nav_bar.html.erb
@@ -3,6 +3,7 @@
     <li><%= link_to "Blogo"                  , blogo_admin_path %> </li>
     <li><%= link_to t('blogo.admin.new_post'), new_blogo_admin_post_path %></li>
     <li><%= link_to t('blogo.admin.comments'), blogo_admin_comments_path %></li>
+    <li><%= link_to 'Sidebar Links', '/blog/admin/links' %></li>
   </ul>
   <ul class="pull-right">
     <li><%= link_to t('blogo.admin.sign_out'), blogo_admin_logout_path  %></li>
