--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -600,12 +600,78 @@ span.marker {
     background-color: #ffff00;
 }
 .blogo-show {
-    text-align: justify;
+    #raw_content {
+        text-align: justify;
+    }
     .meta-image {
-        width: 500px;
+        width: 100%;
         max-width: 100%;
-        float: left;
-        margin: 0 10px 10px 0;
+        margin-bottom: 25px;
+    }
+    .posts-sidebar {
+        .search-form {
+            margin-bottom: 25px;
+            .search-container {
+                position: relative;
+                display: flex;
+                input[type="text"] {
+                    border-radius: 4px;
+                    border: 1px solid #9d9d9d;
+                    outline: 0;
+                    padding: 10px 25px;
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    margin-right: 10px;
+                }
+                input[type="submit"] {
+                    border-radius: 4px;
+                    background-color: $blue-color;
+                    color: #ffffff;
+                    border: 0;
+                    outline: 0;
+                }
+            }
+        }
+        h5 {
+            margin-bottom: 0;
+            padding: 10px 0;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            li {
+                display: flex;
+                padding: 20px 0;
+                border-top: 1px solid #9d9d9d;
+                img {
+                    width: 100px;
+                    margin-right: 10px;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+                h6 {
+                    a {
+                        color: #333333;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+        .tags {
+            display: flex;
+            flex-flow: row wrap;
+            padding: 10px 0;
+            a {
+                text-decoration: none;
+                margin: 2px;
+                background-color: $blue-color;
+                padding: 5px 10px;
+                border-radius: 4px;
+                color: #ffffff;
+            }
+        }
     }
 }
 @media only screen and (max-width: 1199px) {
@@ -622,11 +688,6 @@ span.marker {
     }
 }
 @media only screen and (max-width: 767px) {
-    .blogo-show {
-        .meta-image {
-            width: 100%;
-        }
-    }
     .banner .info .text {
         h1 {
             font-size: 16px;
