--- a/app/views/home/search_tags.html.erb
+++ b/app/views/home/search_tags.html.erb
@@ -5,7 +5,7 @@
 				<div class="col-3 blog-card">
 					<div class="col">
 						<div class="image">
-							<a href="/news/<%= post.permalink %>"><img src="<%= post.meta_image %>"></a>
+							<a href="/blogs/<%= post.permalink %>"><img src="<%= post.meta_image %>"></a>
 							<time><%= I18n.localize(post.published_at.to_date, format: :long) %></time>
 						</div>
 						<div class="content">
@@ -18,7 +18,7 @@
 									<% end %>
 								</ul>
 							<% end %>
-							<h4><%= link_to post.title, '/news/'+post.permalink %></h4>
+							<h4><%= link_to post.title, '/blogs/'+post.permalink %></h4>
 							<% re = /<("[^"]*"|'[^']*'|[^'">])*>/ %>
 							<p><%= post.raw_content.gsub!(re, '').gsub('&nbsp;','')[0,60] %>...</p>
 							<span class="quick-view" data-id="<%= post.id %>">Quick View <i class="fa fa-eye"></i></span>
