--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -182,7 +182,7 @@
 													</div>
 													<div class="content">
 														<h4><a href="/blogs/${value.permalink}">${value.title}</a></h4>
-														<p>${value.raw_content.substring(0,60)}...</p>
+														<p>${$(value.raw_content).text().substring(0,60)}...</p>
 														<span class="quick-view" data-id="${value.id}">Quick View <i class="fa fa-eye"></i></span>
 													</div>
 												</div>
